tests/netedit/demandElements/stop/basic/invalid_type/log.netedit
Warning: Current selected Stop type isn't valid.
